[package]
name = "InClass_Assignments"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "problem1"
path = "src/problem1.rs"

[[bin]]
name = "problem2"
path = "src/problem2.rs"

[[bin]]
name = "problem3"
path = "src/problem3.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
